--- a/game/game.cbp
+++ b/game/game.cbp
@@ -4,32 +4,33 @@
 	<Project>
 		<Option title="game" />
 		<Option pch_mode="2" />
-		<Option compiler="msvctk" />
+		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug Win32">
-				<Option output="Debug\Egoboo2x" prefix_auto="1" extension_auto="1" />
+				<Option platforms="Windows;" />
+				<Option output="Debug/Egoboo2x" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Debug" />
-				<Option type="1" />
-				<Option compiler="msvctk" />
+				<Option type="0" />
+				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="/DWIN32" />
-					<Add option="/D_DEBUG" />
-					<Add option="/D_WINDOWS" />
-					<Add option="/D_CRT_SECURE_NO_DEPRECATE" />
-					<Add option="/D_CONSOLE" />
-					<Add option="/W4" />
-					<Add option="/Zi" />
-					<Add option="/Od" />
-					<Add option="/Wp64" />
-					<Add option="/MDd" />
-					<Add directory="$(SolutionDir)\enet\include" />
+					<Add option="-W" />
+					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-g" />
+					<Add option="-O0" />
+					<Add option="-DWIN32" />
+					<Add option="-D_DEBUG" />
+					<Add option="-D_WINDOWS" />
+					<Add option="-D_CRT_SECURE_NO_DEPRECATE" />
+					<Add option="-D_CONSOLE" />
+					<Add directory="$(SolutionDir)/enet/include" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="$(SolutionDir)\enet\include" />
+					<Add directory="$(SolutionDir)/enet/include" />
 				</ResourceCompiler>
 				<Linker>
-					<Add option="/debug" />
-					<Add option="/pdb:Debug\game.pdb" />
+					<Add option="-s" />
+					<Add option="-pg" />
 					<Add library="SDL_image" />
 					<Add library="SDL" />
 					<Add library="SDLmain" />
@@ -43,25 +44,27 @@
 				</Linker>
 			</Target>
 			<Target title="Release Win32">
-				<Option output="Release\Egoboo2x" prefix_auto="1" extension_auto="1" />
+				<Option platforms="Windows;" />
+				<Option output="Release/Egoboo2x" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Release" />
-				<Option type="1" />
-				<Option compiler="msvctk" />
+				<Option type="0" />
+				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="/DWIN32" />
-					<Add option="/DNDEBUG" />
-					<Add option="/D_WINDOWS" />
-					<Add option="/D_CRT_SECURE_NO_DEPRECATE" />
-					<Add option="/W3" />
-					<Add option="/MD" />
-					<Add directory="$(SolutionDir)\enet\include" />
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
+					<Add option="-pedantic" />
+					<Add option="-W" />
+					<Add option="-Wall" />
+					<Add option="-DWIN32" />
+					<Add option="-DNDEBUG" />
+					<Add option="-D_WINDOWS" />
+					<Add option="-D_CRT_SECURE_NO_DEPRECATE" />
+					<Add directory="$(SolutionDir)/enet/include" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="$(SolutionDir)\enet\include" />
+					<Add directory="$(SolutionDir)/enet/include" />
 				</ResourceCompiler>
 				<Linker>
-					<Add option="/debug" />
-					<Add option="/INCREMENTAL:NO" />
 					<Add library="SDL" />
 					<Add library="SDLmain" />
 					<Add library="SDL_ttf" />
@@ -74,7 +77,98 @@
 					<Add library="shlwapi" />
 				</Linker>
 			</Target>
+			<Target title="Debug Blah-nix">
+				<Option platforms="Unix;" />
+				<Option output="Debug/Egoboo2x" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Debug" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-g" />
+					<Add option="-O0" />
+					<Add option="-D_DEBUG" />
+					<Add option="-D_CONSOLE" />
+					<Add directory="$(SolutionDir)/enet/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-pg" />
+					<Add library="libenet" />
+					<Add library="GL" />
+					<Add library="libsdl" />
+					<Add directory="$(SolutionDir)/enet" />
+				</Linker>
+			</Target>
+			<Target title="Release Blah-nix">
+				<Option platforms="Unix;" />
+				<Option output="Release/Egoboo2x" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Release" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
+					<Add option="-pedantic" />
+					<Add option="-W" />
+					<Add option="-Wall" />
+					<Add option="-DNDEBUG" />
+					<Add directory="$(SolutionDir)/enet/include" />
+				</Compiler>
+				<Linker>
+					<Add library="libebet" />
+					<Add library="GL" />
+					<Add library="libsdl" />
+					<Add directory="$(SolutionDir)/enet" />
+				</Linker>
+			</Target>
+			<Target title="Debug OsX">
+				<Option platforms="Mac;" />
+				<Option output="Debug/Egoboo2x" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Debug" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-pg" />
+					<Add option="-g" />
+					<Add option="-O0" />
+					<Add option="-D_DEBUG" />
+					<Add option="-D_CONSOLE" />
+					<Add directory="$(SolutionDir)/enet/include" />
+				</Compiler>
+				<ResourceCompiler>
+					<Add directory="$(SolutionDir)/enet/include" />
+				</ResourceCompiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-pg" />
+				</Linker>
+			</Target>
+			<Target title="Release OsX">
+				<Option platforms="Mac;" />
+				<Option output="Release/Egoboo2x" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Release" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-Os" />
+					<Add option="-pedantic" />
+					<Add option="-W" />
+					<Add option="-Wall" />
+					<Add option="-DNDEBUG" />
+					<Add directory="$(SolutionDir)/enet/include" />
+				</Compiler>
+				<ResourceCompiler>
+					<Add directory="$(SolutionDir)/enet/include" />
+				</ResourceCompiler>
+			</Target>
 		</Build>
+		<Compiler>
+			<Add directory="../enet/include" />
+		</Compiler>
 		<Unit filename="AStar.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -144,14 +238,18 @@
 		<Unit filename="System.h" />
 		<Unit filename="System_lin.c">
 			<Option compilerVar="CC" />
-			<Option target="&lt;{~None~}&gt;" />
+			<Option target="Debug Win32" />
+			<Option target="Release Win32" />
 		</Unit>
 		<Unit filename="System_mac.c">
 			<Option compilerVar="CC" />
-			<Option target="&lt;{~None~}&gt;" />
+			<Option target="Debug OsX" />
+			<Option target="Release OsX" />
 		</Unit>
 		<Unit filename="System_win32.c">
 			<Option compilerVar="CC" />
+			<Option target="Debug Win32" />
+			<Option target="Release Win32" />
 		</Unit>
 		<Unit filename="Task.c">
 			<Option compilerVar="CC" />
@@ -212,10 +310,19 @@
 		</Unit>
 		<Unit filename="file_lin.c">
 			<Option compilerVar="CC" />
-			<Option target="&lt;{~None~}&gt;" />
+			<Option target="Debug Blah-nix" />
+			<Option target="Release Blah-nix" />
+		</Unit>
+		<Unit filename="file_mac.m">
+			<Option compile="1" />
+			<Option link="1" />
+			<Option target="Debug OsX" />
+			<Option target="Release OsX" />
 		</Unit>
 		<Unit filename="file_win.c">
 			<Option compilerVar="CC" />
+			<Option target="Debug Win32" />
+			<Option target="Release Win32" />
 		</Unit>
 		<Unit filename="game.c">
 			<Option compilerVar="CC" />
@@ -245,6 +352,11 @@
 		</Unit>
 		<Unit filename="input.h" />
 		<Unit filename="input.inl" />
+		<Unit filename="inspirational/cartman.c">
+			<Option compilerVar="CC" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="inspirational/cartman.h" />
 		<Unit filename="mesh.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -285,23 +397,27 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="sound.h" />
-		<Unit filename="..\res\debug.ico">
+		<Unit filename="../res/debug.ico">
+			<Option target="Debug Win32" />
+			<Option target="Debug Blah-nix" />
+			<Option target="Debug OsX" />
+		</Unit>
+		<Unit filename="../res/debug.rc">
 			<Option target="Debug Win32" />
 		</Unit>
-		<Unit filename="..\res\debug.rc">
-			<Option compilerVar="WINDRES" />
-			<Option target="Debug Win32" />
-		</Unit>
-		<Unit filename="..\res\release.ico">
+		<Unit filename="../res/release.ico">
 			<Option target="Release Win32" />
+			<Option target="Release Blah-nix" />
+			<Option target="Release OsX" />
 		</Unit>
-		<Unit filename="..\res\release.rc">
-			<Option compilerVar="WINDRES" />
+		<Unit filename="../res/release.rc">
 			<Option target="Release Win32" />
 		</Unit>
 		<Extensions>
 			<code_completion />
+			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
